feat(base): add design-pattern module

--- a/lcsk42-frameworks/pom.xml
+++ b/lcsk42-frameworks/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>base</module>
         <module>convention</module>
+        <module>design-pattern</module>
     </modules>
 
 
