feat(base): add cache module

--- a/lcsk42-frameworks/pom.xml
+++ b/lcsk42-frameworks/pom.xml
@@ -12,6 +12,7 @@
         <module>convention</module>
         <module>design-pattern</module>
         <module>common</module>
+        <module>cache</module>
     </modules>
 
 
