feat(base): add mybatis module

--- a/lcsk42-frameworks/pom.xml
+++ b/lcsk42-frameworks/pom.xml
@@ -14,6 +14,7 @@
         <module>common</module>
         <module>cache</module>
         <module>web</module>
+        <module>mybatis</module>
     </modules>
 
 
