--- a/lcsk42-services/pom.xml
+++ b/lcsk42-services/pom.xml
@@ -9,6 +9,7 @@
 
     <modules>
         <module>gateway-service</module>
+        <module>admin-service</module>
     </modules>
 
     <properties>
