feat(base): add knife4j for auto doc

--- a/lcsk42-frameworks/convention/pom.xml
+++ b/lcsk42-frameworks/convention/pom.xml
@@ -8,4 +8,11 @@
     </parent>
 
     <artifactId>lcsk42-convention-spring-boot-starter</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations-jakarta</artifactId>
+        </dependency>
+    </dependencies>
 </project>
