--- a/lcsk42-dependencies/pom.xml
+++ b/lcsk42-dependencies/pom.xml
@@ -24,6 +24,8 @@
         <xxl-job.version>3.1.1</xxl-job.version>
         <knife4j-openapi3.version>4.5.0</knife4j-openapi3.version>
         <knife4j-gateway.version>4.5.0</knife4j-gateway.version>
+        <springdoc-openapi.version>2.3.0</springdoc-openapi.version>
+        <swagger-annotations-jakarta.version>2.2.19</swagger-annotations-jakarta.version>
         <commons-collections4.version>4.5.0</commons-collections4.version>
     </properties>
 
@@ -111,6 +113,18 @@
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                 <version>${knife4j-openapi3.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+                <version>${springdoc-openapi.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.swagger.core.v3</groupId>
+                <artifactId>swagger-annotations-jakarta</artifactId>
+                <version>${swagger-annotations-jakarta.version}</version>
             </dependency>
 
             <dependency>
