--- a/lcsk42-frameworks/web/pom.xml
+++ b/lcsk42-frameworks/web/pom.xml
@@ -42,6 +42,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.lcsk42</groupId>
             <artifactId>lcsk42-common-spring-boot-starter</artifactId>
             <version>${project.version}</version>
