--- a/lcsk42-services/admin-service/src/main/resources/application.yml
+++ b/lcsk42-services/admin-service/src/main/resources/application.yml
@@ -31,3 +31,12 @@ management:
   metrics:
     tags:
       application: ${spring.application.name}
+
+knife4j:
+  enable: true
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
