--- a/lcsk42-services/gateway-service/pom.xml
+++ b/lcsk42-services/gateway-service/pom.xml
@@ -37,6 +37,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-gateway-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.lcsk42</groupId>
             <artifactId>lcsk42-base-spring-boot-starter</artifactId>
             <version>${project.version}</version>
