--- a/lcsk42-services/admin-service/pom.xml
+++ b/lcsk42-services/admin-service/pom.xml
@@ -15,5 +15,10 @@
             <artifactId>lcsk42-web-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
     </dependencies>
 </project>
