--- a/lcsk42-services/gateway-service/pom.xml
+++ b/lcsk42-services/gateway-service/pom.xml
@@ -46,5 +46,17 @@
             <artifactId>lcsk42-base-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.lcsk42</groupId>
+            <artifactId>lcsk42-convention-spring-boot-starter</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.lcsk42</groupId>
+            <artifactId>lcsk42-common-spring-boot-starter</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
