feat(*): add biz user module

--- a/lcsk42-frameworks/pom.xml
+++ b/lcsk42-frameworks/pom.xml
@@ -15,6 +15,7 @@
         <module>cache</module>
         <module>web</module>
         <module>mybatis</module>
+        <module>bizs</module>
     </modules>
 
 
