--- a/lcsk42-services/gateway-service/src/main/resources/application.yml
+++ b/lcsk42-services/gateway-service/src/main/resources/application.yml
@@ -30,6 +30,9 @@ management:
     web:
       exposure:
         include: '*'
+  info:
+    git:
+      mode: full
   metrics:
     tags:
       application: ${spring.application.name}
