--- a/lcsk42-services/admin-service/src/main/resources/application.yml
+++ b/lcsk42-services/admin-service/src/main/resources/application.yml
@@ -6,6 +6,11 @@ spring:
     name: lcsk42-admin-service
   profiles:
     active: dev
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      password: redis-password
   cloud:
     nacos:
       discovery:
