--- a/lcsk42-frameworks/pom.xml
+++ b/lcsk42-frameworks/pom.xml
@@ -19,5 +19,6 @@
         <module>web</module>
         <module>mybatis</module>
         <module>bizs</module>
+        <module>rocketmq</module>
     </modules>
 </project>
