--- a/lcsk42-services/admin-service/pom.xml
+++ b/lcsk42-services/admin-service/pom.xml
@@ -29,6 +29,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.lcsk42</groupId>
+            <artifactId>lcsk42-rocketmq-spring-boot-starter</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
