--- a/lcsk42-services/admin-service/src/main/resources/application.yml
+++ b/lcsk42-services/admin-service/src/main/resources/application.yml
@@ -50,3 +50,11 @@ mybatis-plus:
       logic-not-delete-value: 0
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+rocketmq:
+  name-server: localhost:9876
+  producer:
+    group: lcsk42_admin-service_common-message-execute_pg
+    send-message-timeout: 2000
+    retry-times-when-send-failed: 1
+    retry-times-when-send-async-failed: 1
