--- a/lcsk42-services/gateway-service/src/main/resources/application.yml
+++ b/lcsk42-services/gateway-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: local.lcsk42.com:8848
         username: nacos
         password: nacos-password
     gateway:
