feat(common): add IdUtil

--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
             <dependency>
                 <groupId>com.lcsk42</groupId>
                 <artifactId>lcsk42-dependencies</artifactId>
-                <version>1.0.0</version>
+                <version>${project.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
