feat(file): add file module

--- a/lcsk42-frameworks/pom.xml
+++ b/lcsk42-frameworks/pom.xml
@@ -20,5 +20,6 @@
         <module>mybatis</module>
         <module>bizs</module>
         <module>rocketmq</module>
+        <module>file</module>
     </modules>
 </project>
