--- a/lcsk42-services/admin-service/pom.xml
+++ b/lcsk42-services/admin-service/pom.xml
@@ -35,8 +35,9 @@
         </dependency>
 
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
+            <groupId>com.lcsk42</groupId>
+            <artifactId>lcsk42-file-spring-boot-starter</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
