--- a/lcsk42-dependencies/pom.xml
+++ b/lcsk42-dependencies/pom.xml
@@ -29,6 +29,9 @@
         <commons-collections4.version>4.5.0</commons-collections4.version>
         <commons-io.version>2.19.0</commons-io.version>
         <rocketmq-spring-boot-starter.version>2.3.1</rocketmq-spring-boot-starter.version>
+        <s3.version>2.32.24</s3.version>
+        <jsch.version>2.27.2</jsch.version>
+        <aliyun-sdk-oss.version>3.18.3</aliyun-sdk-oss.version>
     </properties>
 
     <dependencyManagement>
@@ -141,6 +144,24 @@
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-gateway-spring-boot-starter</artifactId>
                 <version>${knife4j-gateway.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>software.amazon.awssdk</groupId>
+                <artifactId>s3</artifactId>
+                <version>${s3.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.mwiede</groupId>
+                <artifactId>jsch</artifactId>
+                <version>${jsch.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>${aliyun-sdk-oss.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
