--- a/lcsk42-frameworks/rocketmq/pom.xml
+++ b/lcsk42-frameworks/rocketmq/pom.xml
@@ -14,5 +14,11 @@
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-spring-boot-starter</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.lcsk42</groupId>
+            <artifactId>lcsk42-convention-spring-boot-starter</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
